# weather-cli

./: Dockerfile  GitVersion.yml  README.md  pyproject.toml
src/weather_cli/: main.py
src/weather_cli/models/: config.py  current_weather.py
src/weather_cli/services/: weather_data_service.py
